# multi-agent-resume-tailor

./: .aiderignore  .gitignore  .graphifyignore  .pre-commit-config.yaml  AGENTS.md  README.md  env_example  pyproject.toml  requirements.txt  resume_tailor_cli.py  trigger_ats_optimizer.py  trigger_gap_analysis.py  trigger_job_description_analyser.py  trigger_professional_experience.py  trigger_professional_summary.py  trigger_quality_assessment.py  trigger_resume_extraction.py  trigger_resume_extractor.py  trigger_skill_optimizer.py
.claude/: settings.json
.claude/rules/agents/: RULES.md
.claude/rules/config/: RULES.md
.claude/rules/data_models/: RULES.md
.claude/rules/tools/: RULES.md
.github/workflows/: python-ci.yml
.pre-commit-hooks/: pyscn-check.py  pyscn-check.sh
docs/: agent-tool-coordination-guide.md  agentic-coding-control-protocol.md  graphify-guide.md  token-efficiency-guide.md
docs/workflow/: README.md  agent-roles.md  evaluation.md  failure-handling.md  human-in-the-loop.md  idempotency.md  memory-boundaries.md  observability.md  orchestration-graph.md  retry-strategy.md  state-management.md  token-cost-reduction.md  tool-contracts.md
examples/agents/: common.py  example_ats_optimization.py  example_experience_optimizer.py  example_gap_analysis.py  example_job_analyzer.py  example_quality_assurance.py  example_resume_extractor.py  example_skills_optimizer.py  example_summary_writer.py
graphify-out/: .gitignore  .graphify_analysis.json  .graphify_root  .graphify_semantic_marker  GRAPH_REPORT.md  graph.html  graph.json
graphify-out/cache/: stat-index.json
regression_fix/smoke_test/: st08_summary_quality_gate_live.py
scripts/: graphify-full.bat  graphify-full.sh
src/: agent_orchestrator.py  checkpointing.py  main.py  orchestrator_stages.md
src/agents/: __init__.py  agent_config.py  ats_optimization_agent.py  experience_optimizer_agent.py  gap_analysis_agent.py  job_analyzer_agent.py  quality_assurance_agent.py  resume_extractor_agent.py  skills_optimizer_agent.py  summary_writer_agent.py
src/agents/ats_optimizer/: __init__.py  agent.py  ats_optimizer_architecture.md  engines.py  models.py
src/agents/gap_analysis/: __init__.py  agent.py  engines.py  gap_analysis_architecture.md  lessons_learned.md
src/agents/job_description_analyser/: __init__.py  agent.py  job_description_analyser_architecture.md
src/agents/professional_experience/: __init__.py  agent.py  engines.py  expensive_agent.md  models.py  professional_experience_architecture.md
src/agents/professional_summary/: __init__.py  agent.py  engines.py  models.py  professional_summary_architecture.md
src/agents/quality_assessment/: __init__.py  agent.py  engines.py  quality_assessment_architecture.md
src/agents/quality_feedback/: __init__.py  agent.py
src/agents/resume_parser/: __init__.py  agent.py  pipeline.py  resume_agent_architecture.md
src/agents/skill_optimizer/: __init__.py  agent.py  skill_optimizer_architecture.md
src/config/: README.md  agents.yaml  settings.yaml  tasks.yaml
src/config/agents/: README.md  ats_optimizer.yaml  gap_analysis.yaml  job_description_analyser.yaml  professional_experience.yaml  professional_summary.yaml  quality_assessment.yaml  quality_feedback.yaml  resume_parser.yaml  skill_optimizer.yaml
src/config/tasks/: README.md  ats_optimizer.yaml  gap_analysis.yaml  job_description_analyser.yaml  professional_experience.yaml  professional_summary.yaml  quality_assessment.yaml  quality_feedback.yaml  resume_parser.yaml  skill_optimizer.yaml
src/core/: README.llm_cache.md  config.py  llm_cache.py  logger.py  prompt_catalog.py  resiliency.py  token_counter.py
src/core/llm_token_tracker/: README.md  __init__.py  budget_guard.py  counter.py  exceptions.py  llm_token_budget_guard.py  llm_token_counter.py  llm_token_tracking_context.py  tracking_context.py  usage.py
src/core/pii_mapping_store/: __init__.py  exceptions.py  redis_pii_mapping_store.py
src/core/resiliency/: README.md  __init__.py  circuit_breaker.py  policy.py  rate_limit.py  resilient_call.py  resilient_llm_call.py  transient_retry.py
src/core/run_context/: __init__.py  current_run_id.py  exceptions.py
src/core/run_id_binding/: README.run_id_flow_architecture.md  __init__.py  current_run_id.py  exceptions.py
src/core/settings/: CONFIGURATION_PATTERNS.md  README.md  __init__.py  agent_task_catalog.py  exceptions.py  paths.py  runtime.py  schema.py  yaml_source.py
src/data_models/: __init__.py  evaluation.py  job.py  orchestration.py  rendering.py  resume.py  strategy.py
src/evaluation_rubrics/: __init__.py  accuracy_rubric.py  ats_rubric.py  relevance_rubric.py  score_weighting.py
src/formatters/: README.md  __init__.py  ats_optimization_formatter.py  base_formatter.py  experience_optimizer_formatter.py  gap_analysis_formatter.py  llm_context_rendering.py  professional_summary_formatter.py  quality_assurance_formatter.py  quality_feedback_formatter.py  skills_optimizer_formatter.py
src/hitl/: __init__.py
src/hitl/professional_experience/: __init__.py  answers.py  checkpoint_types.py  clarifications.py  models.py  persistence.py
src/observability/: README.md  __init__.py  iteration_metrics.py  langsmith_backend.py  langsmith_init.py  metrics.py  tracing.py  weave_setup.py
src/orchestration/: __init__.py  crew_task_execution.py  exceptions.py  graph.py  human_review_policy.py  nodes.py  orchestration_architecture.md  runner.py  state.py
src/orchestration/nodes/: __init__.py  assembly.py  ats_patch.py  experience.py  ingestion.py  quality.py  rehydrate_pii.py  render.py  resume_quality.py  skills.py  strategy.py  summary.py
src/resume_quality_evaluation/: __init__.py  job_alignment.py  quality-report-contract-design.md  quality_decision.py  rendered_structure.py  resume-quality-evaluation-strategy.md  skill_similarity_match.py  truthfulness.py
src/tools/: ELEGANT_REFACTORING_PRINCIPLES.md  TOOLING_PLAN.md  __init__.py  agent_facing_tools.py  ats_validation.py  document_converter.py  issues.md  job_analyzer.py  resume_parser.py
(+179 files in other folders)
