[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "resume-tailor-crew"
version = "0.1.0"
description = "Enterprise-grade CrewAI system for intelligent resume tailoring based on job descriptions"
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = { text = "MIT" }
authors = [
    { name = "Shubham Singh", email = "shubh2014shiv@gmail.com" }
]
keywords = [
    "crewai",
    "resume",
    "tailoring",
    "job-matching",
    "ai-agents",
    "nlp"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Topic :: Text Processing",
]

dependencies = [
    "crewai>=0.1.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0",
    "langgraph>=0.4.0",
    "structlog>=25.0.0",
    "tenacity>=8.2.0",
    "pybreaker>=1.0.0",
    "aiobreaker>=0.5.0",
    "ratelimit>=2.2.1",
    "redis>=5.0.0",
    "langsmith>=0.1.0", # LLM agent observability & tracing
    "markitdown>=0.1.0", # PDF/DOCX/PPTX/XLSX → Markdown for LLM pipelines
    "jinja2>=3.1.0", # LaTeX templating for the resume renderer (document_rendering)
    "presidio-analyzer>=2.2.362",
    "presidio-anonymizer>=2.2.362",
    "en-core-web-lg",
    "python-docx>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.5.0",
    "pyright>=1.1.0",
    "pre-commit>=4.0.0",
]

# uv-only dependency groups (PEP 735) — separate from main project deps
[dependency-groups]
graphify = [
    "graphifyy>=0.8.0",
    # Optional extras (uncomment if needed):
    # "graphifyy[leiden]",   # Leiden community detection (Python < 3.13 — works on 3.12)
    # "graphifyy[pdf]",      # PDF extraction
    # "graphifyy[office]",   # .docx / .xlsx support
    # "graphifyy[mcp]",      # MCP server for tool-based agent access
]

[tool.hatch.build.targets.wheel]
packages = ["src/agents", "src/config", "src/core", "src/data_models", "src/formatters", "src/observability", "src/orchestration", "src/tools"]


[tool.uv.sources]
en-core-web-lg = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.8.0/en_core_web_lg-3.8.0-py3-none-any.whl" }

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "C",      # flake8-comprehensions
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by ruff format)
    "C901",   # function is too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false
extraPaths = ["."]

[[tool.pyright.executionEnvironments]]
root = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--strict-markers --tb=short -v"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
precision = 2
